src/assets/sass/layout/_wrapper.scss
@use 'sass:color';
@use '../libs/breakpoints';
@use '../libs/functions';
@use '../libs/mixins';
@use '../libs/vendor';

///
/// Solid State by HTML5 UP
/// html5up.net | @ajlkn
/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
///

/* Wrapper */

/// Sets the colors of the wrapper's top/bottom edges.
/// @param {string} $color Color.
@mixin wrapper-edges-color($color: black) {
  &:before,
  &:after {
    background-image: mixins.svg-url(
      '<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,100 100,0 100,100" style="fill:#{$color};" /></svg>'
    );
  }

  &:before {
    box-shadow:
      inset 0 -1px 0 0 $color,
      0 1px 0 0 $color;
  }

  &:after {
    box-shadow:
      inset 0 -1px 0 0 $color,
      0 1px 0 0 $color;
  }
}

#wrapper {
  > header {
    @include mixins.padding(
      7.5em,
      0,
      (3.5em, 0, functions.size(wrapper-edges, large) * -0.5, 0)
    );

    .inner {
      margin: 0 auto;
      width: functions.size(inner);
    }

    h2 {
      border-bottom: solid 2px functions.palette(border);
      font-size: 2em;
      margin-bottom: functions.size(element-margin) * 0.4;
      padding-bottom: functions.size(element-margin) * 0.2;
    }

    p {
      font-family: functions.font(family-heading);
      font-size: 1em;
      font-weight: functions.font(weight-heading);
      letter-spacing: functions.font(kern-heading);
      line-height: 2;
      text-transform: uppercase;
    }
  }

  @include breakpoints.breakpoint('<=large') {
    > header {
      @include mixins.padding(
        5em,
        0,
        (4em, 0, functions.size(wrapper-edges, large) * 0.5, 0)
      );

      background-color: functions.palette(bg);

      background-image:
        linear-gradient(
          to top,
          color.adjust(functions.palette(bg), $alpha: -0.2),
          color.adjust(functions.palette(bg), $alpha: -0.2)
        ),
        url('../images/spring-wsp.jpg');

      background-size: auto, cover;

      background-position:
        center,
        0% 30%;

      background-repeat: no-repeat, no-repeat;

      margin-bottom: (functions.size(wrapper-edges, large) * -1);
    }
  }

  @include breakpoints.breakpoint('<=medium') {
    > header {
      @include mixins.padding(
        7em,
        3em,
        (4em, 0, functions.size(wrapper-edges, medium) * 0.5, 0)
      );

      background-size: auto, cover;

      background-position:
        center,
        0% 0%;

      margin-bottom: (functions.size(wrapper-edges, medium) * -1);

      .inner {
        width: 100%;
      }
    }
  }

  @include breakpoints.breakpoint('<=small') {
    > header {
      @include mixins.padding(
        3.75em,
        2em,
        (2.75em, 0, functions.size(wrapper-edges, small) * 0.5, 0)
      );

      background-size: auto, cover;

      margin-bottom: (functions.size(wrapper-edges, small) * -1);

      h2 {
        font-size: 1.25em;
      }

      p {
        font-size: 0.8em;
      }
    }
  }
}

.wrapper {
  background-color: functions.palette(bg);
  margin: functions.size(wrapper-edges, large) 0;
  position: relative;
  @include wrapper-edges-color(functions.palette(bg));

  &:before,
  &:after {
    background-repeat: no-repeat;
    background-size: 100% 100%;
    content: '';
    display: block;
    height: functions.size(wrapper-edges, large);
    position: absolute;
    width: 100%;
  }

  &:before {
    left: 0;
    top: (functions.size(wrapper-edges, large) * -1);
  }

  &:after {
    @include vendor.vendor('transform', 'scaleY(-1)');
    bottom: (functions.size(wrapper-edges, large) * -1);
    left: 0;
  }

  &.alt {
    &:before {
      @include vendor.vendor('transform', 'scaleX(-1)');
    }

    &:after {
      @include vendor.vendor('transform', 'scaleY(-1) scaleX(-1)');
    }
  }

  .inner {
    @include mixins.padding(3em, 0);
    margin: 0 auto;
    width: functions.size(inner);
  }

  @for $i from 2 through functions.misc(max-wrapper-styles) {
    $j: 3 * ($i - 1);
    $color: color.adjust(
      color.adjust(functions.palette(bg), $lightness: $j * 1%),
      $saturation: -($j * 0.5) * 1%
    );

    &.style#{$i} {
      background-color: $color;
      @include wrapper-edges-color($color);
    }
  }

  &.spotlight {
    @include wrapper-edges-color(functions.palette(accent));
    background-color: functions.palette(accent);
    color: #ffffff;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: #ffffff;
    }

    p {
      color: rgba(255, 255, 255, 0.85);
    }

    .inner {
      @include vendor.vendor('display', 'flex');
      @include vendor.vendor('align-items', 'center');
      @include vendor.vendor('flex-direction', 'row');
    }

    .image {
      border-radius: 100%;
      margin: 0 functions.size(section-spacing, large)
        functions.size(element-margin) 0;
      width: 22em;
      overflow: hidden;
      -ms-flex: 1;

      img {
        border-radius: 100%;
        width: 100%;
      }
    }

    .content {
      width: 100%;
      -ms-flex: 2;
    }

    &:nth-child(2n - 1) {
      .inner {
        @include vendor.vendor('flex-direction', 'row-reverse');
        text-align: right;
      }

      .image {
        margin: 0 0 functions.size(element-margin)
          functions.size(section-spacing, large);
      }
    }

    @for $i from 2 through functions.misc(max-wrapper-styles) {
      $j: 3 * ($i - 1);
      $color: color.adjust(
        color.adjust(functions.palette(accent), $lightness: -$j * 1%),
        $saturation: $j * 0.5%
      );

      &.style#{$i} {
        background-color: $color;
        @include wrapper-edges-color($color);
        color: #ffffff;

        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
          color: #ffffff;
        }
      }
    }
  }

  @include breakpoints.breakpoint('<=medium') {
    margin: functions.size(wrapper-edges, medium) 0;

    &:before,
    &:after {
      height: functions.size(wrapper-edges, medium);
    }

    &:before {
      top: (functions.size(wrapper-edges, medium) * -1);
    }

    &:after {
      bottom: (functions.size(wrapper-edges, medium) * -1);
      left: 0;
    }

    .inner {
      @include mixins.padding(3em, 3em);
      width: 100%;
    }

    &.spotlight {
      .image {
        margin: 0 functions.size(section-spacing, medium)
          functions.size(element-margin) 0;
        width: 32em;
      }

      &:nth-child(2n - 1) {
        .image {
          margin: 0 0 functions.size(element-margin)
            functions.size(section-spacing, medium);
        }
      }
    }
  }

  @include breakpoints.breakpoint('<=small') {
    margin: functions.size(wrapper-edges, small) 0;

    &:before,
    &:after {
      height: functions.size(wrapper-edges, small);
    }

    &:before {
      top: (functions.size(wrapper-edges, small) * -1);
    }

    &:after {
      bottom: (functions.size(wrapper-edges, small) * -1);
      left: 0;
    }

    .inner {
      @include mixins.padding(2em, 2em);
    }

    &.spotlight {
      .inner {
        @include vendor.vendor('align-items', 'flex-start');
      }

      .image {
        width: 19em;
        margin: 0 functions.size(section-spacing, small)
          functions.size(element-margin) 0;
      }

      &:nth-child(2n - 1) {
        .image {
          margin: 0 0 functions.size(element-margin)
            functions.size(section-spacing, small);
        }
      }
    }
  }

  @include breakpoints.breakpoint('<=xsmall') {
    &.spotlight {
      .inner {
        display: block;
      }

      .image {
        margin: 0 0 (functions.size(element-margin) * 0.5) 0 !important;
        max-width: 85%;
        width: 12em;
      }
    }
  }

  @include breakpoints.breakpoint('<=xxsmall') {
    .inner {
      @include mixins.padding(2em, 1.5em);
    }
  }
}

